// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`正确渲染input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.1875em;
}

.c0 > input,
.c0 > textarea {
  padding: 6px 0 7px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.1876em;
  min-height: 1.1876em;
}

.c0 > input::-moz-placeholder,
.c0 > textarea::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder,
.c0 > textarea::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder,
.c0 > textarea:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear,
.c0 > textarea::-ms-clear {
  display: none;
}

.c0 > input:focus,
.c0 > textarea:focus {
  outline: 0;
}

.c0 > input:invalid,
.c0 > textarea:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`渲染不可用的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  color: rgba(0,0,0,0.38);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.1875em;
}

.c0 > input,
.c0 > textarea {
  padding: 6px 0 7px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.1876em;
  min-height: 1.1876em;
}

.c0 > input::-moz-placeholder,
.c0 > textarea::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder,
.c0 > textarea::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder,
.c0 > textarea:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear,
.c0 > textarea::-ms-clear {
  display: none;
}

.c0 > input:focus,
.c0 > textarea:focus {
  outline: 0;
}

.c0 > input:invalid,
.c0 > textarea:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c1 {
  color: rgba(0,0,0,0.38);
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1::before {
  background: transparent;
  background-image: linear-gradient( to right, rgba(0,0,0,0.42) 33%, transparent 0% );
  background-position: left top;
  background-repeat: repeat-x;
  background-size: 5px 1px;
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input sinoui-input--disabled"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`渲染密集模式下的Input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.1875em;
}

.c0 > input,
.c0 > textarea {
  padding: 6px 0 7px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.1876em;
  min-height: 1.1876em;
}

.c0 > input::-moz-placeholder,
.c0 > textarea::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder,
.c0 > textarea::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder,
.c0 > textarea:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear,
.c0 > textarea::-ms-clear {
  display: none;
}

.c0 > input:focus,
.c0 > textarea:focus {
  outline: 0;
}

.c0 > input:invalid,
.c0 > textarea:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

.c1::before {
  background-color: rgba(0,0,0,0.42);
  left: 0;
  bottom: 0;
  content: '';
  display: block;
  height: 1px;
  position: absolute;
  right: 0;
  -webkit-transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  transition: background-color 200ms cubic-bezier(0.4,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1:hover::before {
  background-color: rgba(0,0,0,0.87);
  height: 2px;
}

.c1 > input {
  padding-top: 3px;
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input sinoui-input--dense"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;

exports[`渲染错误状态下的input 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: text;
  color: rgba(0,0,0,0.87);
  font-size: 1rem;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','PingFang SC','Hiragino Sans GB','Microsoft YaHei',Roboto,'Noto Sans SC','Helvetica Neue',Helvetica,Arial,sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol';
  line-height: 1.1875em;
}

.c0 > input,
.c0 > textarea {
  padding: 6px 0 7px;
  display: block;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  line-height: inherit;
  font: inherit;
  color: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  border: none;
  box-sizing: content-box;
  background: none;
  margin: 0px;
  -webkit-tap-highlight-color: transparent;
  min-width: 0px;
  width: 100%;
  height: 1.1876em;
  min-height: 1.1876em;
}

.c0 > input::-moz-placeholder,
.c0 > textarea::-moz-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-webkit-input-placeholder,
.c0 > textarea::-webkit-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input:-ms-input-placeholder,
.c0 > textarea:-ms-input-placeholder {
  color: rgba(0,0,0,0.38);
}

.c0 > input::-ms-clear,
.c0 > textarea::-ms-clear {
  display: none;
}

.c0 > input:focus,
.c0 > textarea:focus {
  outline: 0;
}

.c0 > input:invalid,
.c0 > textarea:invalid {
  box-shadow: none;
}

.c0 > textarea {
  resize: none;
  overflow: hidden;
}

.c1 {
  color: rgba(0,0,0,0.87);
}

.c1.c1::after {
  background-color: #f44336;
  -webkit-transform: scaleX(1) scaleY(1);
  -ms-transform: scaleX(1) scaleY(1);
  transform: scaleX(1) scaleY(1);
}

.c1::after {
  background-color: #3f51b5;
  left: 0;
  bottom: 0;
  content: '';
  height: 2px;
  position: absolute;
  right: 0;
  -webkit-transition: -webkit-transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  -webkit-transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  transition: transform 200ms cubic-bezier(0.0,0.0,0.2,1) 0ms;
  pointer-events: none;
  -webkit-transform: scaleX(0) scaleY(0);
  -ms-transform: scaleX(0) scaleY(0);
  transform: scaleX(0) scaleY(0);
}

label ~ .c1 {
  margin-top: 16px;
}

.c1::before,
.c1::after {
  position: absolute;
  bottom: 0px;
  overflow: hidden;
  font-size: 0px;
}

<div
  className="c0 sinoui-base-input__layout c1 sinoui-input sinoui-input--error"
  data-testid="baseInput"
  onClick={[Function]}
>
  <input
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
</div>
`;
